--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,6 +22,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Fetch the master branch
       run: git fetch origin HEAD:refs/remotes/origin/HEAD --depth 1
+    - name: Fetch the master branch
+      run: git diff --name-only origin/HEAD --no-renames --diff-filter=ACMR
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
