--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,15 +31,16 @@ jobs:
     - run: npm i && npm i eslint codecov istanbul typescript
     - run: node_modules/.bin/istanbul cover lib/ace/test/all.js
     - run: changes=$(git diff --name-only origin/HEAD --no-renames --diff-filter=ACMR);
-        if [ "$changes" == "" ]; then
-            echo "checking all files";
-            node node_modules/eslint/bin/eslint "lib/ace/**/*.js";
-        else
-            changes=$(echo "$changes" | grep -P '.js$');
-            echo "checking $changes";
-            if [ "$changes" != "" ]; then
-                node node_modules/eslint/bin/eslint $changes;
-            fi
-        fi
+        # if [ "$changes" == "" ]; then
+        #     echo "checking all files";
+        #     node node_modules/eslint/bin/eslint "lib/ace/**/*.js";
+        # else
+        #     changes=$(echo "$changes" | grep -P '.js$');
+        #     echo "checking $changes";
+        #     if [ "$changes" != "" ]; then
+        #         node node_modules/eslint/bin/eslint $changes;
+        #     fi
+        # fi
+    - run: npm run lint
     - run: node_modules/.bin/codecov
     - run: node_modules/.bin/tsc --noImplicitAny --strict --noUnusedLocals --noImplicitReturns --noUnusedParameters --noImplicitThis ace.d.ts
