--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "ace",
+    "name": "ace-editor",
     "description": "Ajax.org Code Editor is a full featured source code highlighting editor that powers the Cloud9 IDE",
-    "version": "1.4.4",
+    "version": "0.0.0-rc1",
     "homepage": "http://github.com/ajaxorg/ace",
     "engines": {
         "node": ">= 0.6.0"
     },
     "author": "Fabian Jakobs <fabian@c9.io>",
-    "main": "lib/ace",
+    "main": "src/ace",
     "typings": "ace.d.ts",
     "repository": {
         "type": "git",
@@ -22,6 +22,7 @@
     "mappings": {
         "ace": "."
     },
+    "files": ["src/**", "ace.d.ts"],
     "licenses": [
         {
             "type": "BSD New",
