--- a/tool/package.json
+++ b/tool/package.json
@@ -2,6 +2,7 @@
   "name": "ace-tools",
   "version": "0.1.0",
   "dependencies": {
+    "@lezer/common": "^1.0.2",
     "amd-loader": "~0.0.4",
     "browser-pack": "5.0.1",
     "browserify": "10.2.4",
@@ -10,6 +11,7 @@
     "css-stringify": "1.0.3",
     "deps-sort": "1.3.9",
     "derequire": "2.0.0",
+    "lezer-markdown": "^0.14.5",
     "plist": "3.0.5"
   }
 }
