use new css api when available

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,8 +26,8 @@
         clearTimeout: true,
         setInterval: true,
         clearInterval: true,
+        CSSStyleSheet: true,
         Blob: true,
-        cvox: true,
         alert: true,
         prompt: true,
         XMLHttpRequest: true,
